test/functions/ferguson/ref-pair/tuples/tuple-args2.good
tuple-args2.chpl:20: In function 'writesComputed':
tuple-args2.chpl:22: error: cannot assign to const variable
  tuple-args2.chpl:32: called as writesComputed(tup: 2*[domain(1,int(64),false)] int(64))
tuple-args2.chpl:15: In function 'writesAll':
tuple-args2.chpl:17: error: cannot assign to const variable
  tuple-args2.chpl:34: called as writesAll(tup: 2*[domain(1,int(64),false)] int(64))
tuple-args2.chpl:25: In function 'writesComputedNested':
tuple-args2.chpl:27: error: cannot assign to const variable
  tuple-args2.chpl:37: called as writesComputedNested(tup: 2*2*[domain(1,int(64),false)] int(64))
